# baidu_trans

./: .gitignore  Cargo.toml  README.md
src/: aio.rs  blocking.rs  bloking.rs  config.rs  constant.rs  domain.rs  lang.rs  lib.rs  model.rs  util.rs
src/document/: mod.rs  model.rs
src/domain/: mod.rs  model.rs
src/image/: mod.rs  model.rs
tests/: a.txt  translate.rs
