[package]
name = "baidu_trans"
version = "0.1.0"
edition = "2021"
authors = ["FengYouJun"]
keywords = ["baidu", "translate"]
description = "百度翻译API"
readme = "Readme.md"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.66"
base64 = { version = "0.13.1", optional = true}
chrono = "0.4.22"
md-5 = { version = "0.10.5", optional = true}
reqwest = { version = "0.11.12", features = ["json"]}
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"], optional = true }

[features]
default = ["blocking", "image"]
image = ["md-5", "base64"]
blocking = ["reqwest/blocking"]
aio = ["tokio", "reqwest/tokio-rustls"]

[dev-dependencies]
dotenv = "0.15.0"

[profile.release]
opt-level = "s"
strip = true
debug = false
codegen-units = 16
panic = "abort"
incremental = true
