[package]
name = "baidu_trans"
version = "0.7.5"
edition = "2021"
authors = ["FengYouJun"]
keywords = ["baidu", "translate"]
description = "百度翻译API"
documentation = "https://docs.rs/baidu_trans"
homepage = "https://github.com/FengYouJun520/baidu_trans"
repository = "https://github.com/FengYouJun520/baidu_trans"
readme = "Readme.md"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.22"
md-5 = { version = "0.10.5"}
reqwest = { version = "0.11.12", features = ["json"]}
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1", features = ["macros", "fs"], optional = true }

[features]
default = ["blocking"]
image = ["reqwest/multipart"]
domain = []
doc = ["reqwest/multipart"]
blocking = ["reqwest/blocking"]
aio = ["tokio", "reqwest/tokio-rustls"]

[dev-dependencies]
dotenv = "0.15.0"

[profile.release]
opt-level = "s"
strip = true
debug = false
codegen-units = 16
panic = "abort"
incremental = true
